Closed Bug 25259 Opened 25 years ago Closed 25 years ago

[Regression]Cannot enter text in Composer

Categories

(Core :: DOM: Editor, defect, P1)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: shrir, Assigned: kinmoz)

References

Details

(Keywords: smoketest)

Used today's commercial builds M14 for Windows and Linux(2000012708). To recreate the problem, please do the following steps: 1. Install and launch the browser 2. Select menu option File->New -> EditBlank Page 3. Observe that a Composer window with blank page pops up 4. Clicking the mouse in the blank area does not bring up the cursor. 5. You cannot enter any text.
yes I see the problem also on Win/Linux builds...can't enter anything!
I confirm I see the same thing on my win32 system with this morning's verification build.
I'm assuming this might be because of my key event changes yesterday. I'll take a look.
Status: NEW → ASSIGNED
Target Milestone: M14
Same problem with Message Compose!
Keywords: dogfood
Summary: Cannot enter text in Composer → [Regression]Cannot enter text in Composer
add myself to cc list
Keywords: smoketest
*** Bug 25262 has been marked as a duplicate of this bug. ***
*** Bug 25262 has been marked as a duplicate of this bug. ***
I just checked my focus chages, and my builds look OK so I don't think this is mine.
The problem is occuring because of the following assertion: NTDLL! 77f7629c() nsDebug::Assertion(const char * 0x01fa0994, const char * 0x01fa096c, const char * 0x01fa0938, int 239) line 189 + 13 bytes nsDebug::PreCondition(const char * 0x01fa0994, const char * 0x01fa096c, const char * 0x01fa0938, int 239) line 278 + 21 bytes ViewportFrame::RemoveFrame(ViewportFrame * const 0x02bee790, nsIPresContext * 0x03650af0, nsIPresShell & {...}, nsIAtom * 0x00000000, nsIFrame * 0x02bee808) line 239 + 36 bytes FrameManager::RemoveFrame(FrameManager * const 0x035bc270, nsIPresContext * 0x03650af0, nsIPresShell & {...}, nsIFrame * 0x02bee790, nsIAtom * 0x00000000, nsIFrame * 0x02bee808) line 631 nsCSSFrameConstructor::ReconstructDocElementHierarchy(nsCSSFrameConstructor * const 0x035be970, nsIPresContext * 0x03650af0) line 5507 + 46 bytes StyleSetImpl::ReconstructDocElementHierarchy(StyleSetImpl * const 0x035be7b0, nsIPresContext * 0x03650af0) line 931 PresShell::ReconstructFrames() line 2509 + 38 bytes PresShell::StyleSheetDisabledStateChanged(PresShell * const 0x035bc588, nsIDocument * 0x03645910, nsIStyleSheet * 0x03729eb0, int 0) line 2536 nsDocument::SetStyleSheetDisabledState(nsIStyleSheet * 0x03729eb0, int 0) line 1403 nsHTMLEditor::ApplyDocumentOrOverrideStyleSheet(const nsString & {...}, int 1) line 3202 nsHTMLEditor::ApplyOverrideStyleSheet(nsHTMLEditor * const 0x037233f8, const nsString & {...}) line 3132 nsEditorShell::PrepareDocumentForEditing(nsEditorShell * const 0x0362a840, nsIURI * 0x03640230) line 419 + 58 bytes nsEditorShell::OnEndDocumentLoad(nsEditorShell * const 0x0362a848, nsIDocumentLoader * 0x035a80c0, nsIChannel * 0x03640070, unsigned int 0) line 3711 + 28 bytes nsWebShell::OnEndDocumentLoad(nsWebShell * const 0x035a6460, nsIDocumentLoader * 0x035a80c0, nsIChannel * 0x03640070, unsigned int 0) line 3191 nsDocLoaderImpl::FireOnEndDocumentLoad(nsDocLoaderImpl * 0x035a80c0, nsIChannel * 0x03640070, unsigned int 0) line 834 nsDocLoaderImpl::DocLoaderIsEmpty(unsigned int 0) line 725 nsDocLoaderImpl::OnStopRequest(nsDocLoaderImpl * const 0x035a80c4, nsIChannel * 0x03640070, nsISupports * 0x00000000, unsigned int 0, const unsigned short * 0x00000000) line 669 nsLoadGroup::RemoveChannel(nsLoadGroup * const 0x035a8060, nsIChannel * 0x03640070, nsISupports * 0x00000000, unsigned int 0, const unsigned short * 0x00000000) line 535 + 42 bytes nsInputStreamChannel::OnStopRequest(nsInputStreamChannel * const 0x03640074, nsIChannel * 0x036431b0, nsISupports * 0x00000000, unsigned int 0, const unsigned short * 0x00000000) line 367 nsOnStopRequestEvent::HandleEvent(nsOnStopRequestEvent * const 0x03643630) line 279 nsStreamListenerEvent::HandlePLEvent(PLEvent * 0x03640440) line 93 + 12 bytes PL_HandleEvent(PLEvent * 0x03640440) line 526 + 10 bytes PL_ProcessPendingEvents(PLEventQueue * 0x01092090) line 487 + 9 bytes _md_EventReceiverProc(HWND__ * 0x01930936, unsigned int 49379, unsigned int 0, long 17375376) line 975 + 9 bytes USER32! 77e71820() 01092090()
This bug is being caused by attinasi%netscape.com's checkin: mozilla/layout/html/style/src/nsCSSFrameConstructor.cpp revision 1.337
are we going to fix it, or back it out?
*** Bug 25246 has been marked as a duplicate of this bug. ***
attinasi@netscape.com is going to back out his fix. Reaasigning the bug to him.
Assignee: beppe → attinasi
Status: ASSIGNED → NEW
Priority: P3 → P1
adding myself to cc: list
I'll back out attinasi's changes.
Assignee: attinasi → kin
Backed out attinasi@netscape.com's nsCSSFrameConstructor.cpp (revision 1.337) changes. Marking fixed.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
*** Bug 25320 has been marked as a duplicate of this bug. ***
Works on Windows and Linux builds(2000012808M14). Need to verify on Mac build
verified on Mac as.....marking verified using 1/31 build.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.