Fix for bug #25259: [Regression]Cannot enter text in Composer Backed out attinasi@netscape.com's changes from revision 1.337. a=leaf@netscape.com